--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        
+        <a href="see.html" target="blank">help</a>
+
 
         <script src="script.js"></script>
     </body>
