I created a section tag and gave it a class

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <a href="see.html" target="blank">help</a>
+        
+        <section class="background">
+
+        </section>
 
 
         <script src="script.js"></script>
