I created multiple div tags and i gave them classes and styled the class of the section tag that i first created

--- a/index.html
+++ b/index.html
@@ -10,7 +10,25 @@
     <body>
         
         <section class="background">
-
+            <div class="containe">
+                <div class="display left">
+                    <div id="ninth"></div>
+                    <div id="tenth"></div>
+                    <div id="eleventh"></div>
+                </div>
+                <div class="display left">
+                    <div id="sixth"></div>
+                    <div id="seventh"></div>
+                    <div id="eight"></div>
+                </div>
+                <div class="display">
+                    <div id="second"></div>
+                    <div id="third"></div>
+                    <div id="fourth"></div>
+                    <div id="fifth"></div>
+                </div>
+                <div id="first" class="center"><img src="man_utd-removebg-preview.png" alt=""></div>
+            </div>
         </section>
 
 
