--- a/index.html
+++ b/index.html
@@ -12,20 +12,20 @@
         <section class="background">
             <div class="containe">
                 <div class="display left">
-                    <div id="ninth"></div>
-                    <div id="tenth"></div>
-                    <div id="eleventh"></div>
+                    <div id="ninth"><img src="" alt=""></div>
+                    <div id="tenth"><img src="" alt=""></div>
+                    <div id="eleventh"><img src="" alt=""></div>
                 </div>
                 <div class="display left">
-                    <div id="sixth"></div>
-                    <div id="seventh"></div>
-                    <div id="eight"></div>
+                    <div id="sixth"><img src="" alt=""></div>
+                    <div id="seventh"><img src="" alt=""></div>
+                    <div id="eight"><img src="" alt=""></div>
                 </div>
                 <div class="display">
-                    <div id="second"></div>
-                    <div id="third"></div>
-                    <div id="fourth"></div>
-                    <div id="fifth"></div>
+                    <div id="second"><img src="" alt=""></div>
+                    <div id="third"><img src="" alt=""></div>
+                    <div id="fourth"><img src="" alt=""></div>
+                    <div id="fifth"><img src="" alt=""></div>
                 </div>
                 <div id="first" class="center"><img src="man_utd-removebg-preview.png" alt=""></div>
             </div>
@@ -34,4 +34,4 @@
 
         <script src="script.js"></script>
     </body>
-</html>
+</html><img src="" alt="">
