I added image to the multiple image tags that i created earlierand i gave it height

--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@
         
         <section class="background">
             <div class="containe">
-                <div class="display left">
-                    <div id="ninth"><img src="" alt=""></div>
-                    <div id="tenth"><img src="" alt=""></div>
-                    <div id="eleventh"><img src="" alt=""></div>
-                </div>
-                <div class="display left">
-                    <div id="sixth"><img src="" alt=""></div>
-                    <div id="seventh"><img src="" alt=""></div>
-                    <div id="eight"><img src="" alt=""></div>
+                <div class="display">
+                    <div id="ninth"><img src="man_utd-removebg-preview.png" alt="" height="100px"></div>
+                    <div id="tenth"><img src="man_utd-removebg-preview.png" alt="" height="100px"></div>
+                    <div id="eleventh"><img src="man_utd-removebg-preview.png" alt="" height="100px"></div>
                 </div>
                 <div class="display">
-                    <div id="second"><img src="" alt=""></div>
-                    <div id="third"><img src="" alt=""></div>
-                    <div id="fourth"><img src="" alt=""></div>
-                    <div id="fifth"><img src="" alt=""></div>
+                    <div id="sixth"><img src="man_utd-removebg-preview.png" alt="" height="100px"></div>
+                    <div id="seventh"><img src="man_utd-removebg-preview.png" alt="" height="100px"></div>
+                    <div id="eight"><img src="man_utd-removebg-preview.png" alt="" height="100px"></div>
+                </div>
+                <div class="display">
+                    <div id="second"><img src="man_utd-removebg-preview.png" alt="" height="100px"></div>
+                    <div id="third"><img src="man_utd-removebg-preview.png" alt="" height="100px"></div>
+                    <div id="fourth"><img src="man_utd-removebg-preview.png" alt="" height="100px"></div>
+                    <div id="fifth"><img src="man_utd-removebg-preview.png" alt="" height="100px"></div>
                 </div>
                 <div id="first" class="center"><img src="man_utd-removebg-preview.png" alt=""></div>
             </div>
