I created a div, gave it a class and styled it in style.css file

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
                     <div id="fourth"><img src="man_utd-removebg-preview.png" alt="" height="100px"></div>
                     <div id="fifth"><img src="man_utd-removebg-preview.png" alt="" height="100px"></div>
                 </div>
-                <div id="first" class="center"><img src="man_utd-removebg-preview.png" alt=""></div>
+            </div>
+            <div class="display">
+                <div id="first"><img src="man_utd-removebg-preview.png" alt="" height="100px"></div>
             </div>
         </section>
 
