I created a class in script.js and deleted an image tag in inedx.html file and styled them using style.css

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <section class="background">
             <div class="containe">
                 <div class="display">
-                    <div id="ninth"><img src="man_utd-removebg-preview.png" alt="" height="100px"></div>
+                    <div id="ninth"></div>
                     <div id="tenth"><img src="man_utd-removebg-preview.png" alt="" height="100px"></div>
                     <div id="eleventh"><img src="man_utd-removebg-preview.png" alt="" height="100px"></div>
                 </div>
