I deleted multiple image tags

--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
             <div class="containe">
                 <div class="display">
                     <div id="ninth"></div>
-                    <div id="tenth"><img src="man_utd-removebg-preview.png" alt="" height="100px"></div>
-                    <div id="eleventh"><img src="man_utd-removebg-preview.png" alt="" height="100px"></div>
+                    <div id="tenth"></div>
+                    <div id="eleventh"></div>
                 </div>
                 <div class="display">
-                    <div id="sixth"><img src="man_utd-removebg-preview.png" alt="" height="100px"></div>
-                    <div id="seventh"><img src="man_utd-removebg-preview.png" alt="" height="100px"></div>
-                    <div id="eight"><img src="man_utd-removebg-preview.png" alt="" height="100px"></div>
+                    <div id="sixth"></div>
+                    <div id="seventh"></div>
+                    <div id="eight"></div>
                 </div>
                 <div class="display">
-                    <div id="second"><img src="man_utd-removebg-preview.png" alt="" height="100px"></div>
-                    <div id="third"><img src="man_utd-removebg-preview.png" alt="" height="100px"></div>
-                    <div id="fourth"><img src="man_utd-removebg-preview.png" alt="" height="100px"></div>
-                    <div id="fifth"><img src="man_utd-removebg-preview.png" alt="" height="100px"></div>
+                    <div id="second"></div>
+                    <div id="third"></div>
+                    <div id="fourth"></div>
+                    <div id="fifth"></div>
                 </div>
             </div>
             <div class="display">
