I deleted an image tag in index.html

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </div>
             </div>
             <div class="display">
-                <div id="first"><img src="man_utd-removebg-preview.png" alt="" height="100px"></div>
+                <div id="first"></div>
             </div>
         </section>
 
