I added six players and i styled them

--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>LINE UP</title>
+        <title>Document</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
         
         <section class="background">
             <div class="containe">
-                <div class="display">
+                <div class="display left">
                     <div id="ninth"></div>
                     <div id="tenth"></div>
                     <div id="eleventh"></div>
                 </div>
-                <div class="display">
+                <div class="display left">
                     <div id="sixth"></div>
                     <div id="seventh"></div>
                     <div id="eight"></div>
@@ -27,8 +27,6 @@
                     <div id="fourth"></div>
                     <div id="fifth"></div>
                 </div>
-            </div>
-            <div class="display">
                 <div id="first"></div>
             </div>
         </section>
@@ -36,4 +34,4 @@
 
         <script src="script.js"></script>
     </body>
-</html><img src="" alt="">
+</html>
