I added the eleventh player and i created a div tag in index.html and gave it class

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
                     <div id="fourth"></div>
                     <div id="fifth"></div>
                 </div>
+            </div>
+            <div class="display">
                 <div id="first"></div>
             </div>
         </section>
