I updated the codes

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <div id="seventh"></div>
                     <div id="eight"></div>
                 </div>
-                <div class="display">
+                <div class="display line2">
                     <div id="second"></div>
                     <div id="third"></div>
                     <div id="fourth"></div>
