I did the responsiveness for small screen for the front three

--- a/index.html
+++ b/index.html
@@ -17,20 +17,20 @@
                     <div id="tenth"></div>
                     <div id="eleventh"></div>
                 </div>
-                <div class="display left">
+                <!-- <div class="display left">
                     <div id="sixth"></div>
                     <div id="seventh"></div>
                     <div id="eight"></div>
-                </div>
-                <div class="display line2">
+                </div> -->
+                <!-- <div class="display line2">
                     <div id="second"></div>
                     <div id="third"></div>
                     <div id="fourth"></div>
                     <div id="fifth"></div>
-                </div>
+                </div> -->
             </div>
             <div class="display">
-                <div id="first"></div>
+                <!-- <div id="first"></div> -->
             </div>
         </section>
 
