I did the responsiveness for small screen for the middle three

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
                     <div id="tenth"></div>
                     <div id="eleventh"></div>
                 </div>
-                <!-- <div class="display left">
+                <div class="display left2">
                     <div id="sixth"></div>
                     <div id="seventh"></div>
                     <div id="eight"></div>
-                </div> -->
+                </div>
                 <!-- <div class="display line2">
                     <div id="second"></div>
                     <div id="third"></div>
