I did the responsiveness for small screen for two of the back four

--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
                     <div id="seventh"></div>
                     <div id="eight"></div>
                 </div>
-                <!-- <div class="display line2">
+                <div class="display line2">
                     <div id="second"></div>
                     <div id="third"></div>
                     <div id="fourth"></div>
                     <div id="fifth"></div>
-                </div> -->
+                </div>
             </div>
             <div class="display">
                 <!-- <div id="first"></div> -->
