I made the line-up responsive on small screen

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </div>
             </div>
             <div class="display">
-                <!-- <div id="first"></div> -->
+                <div id="first"></div>
             </div>
         </section>
 
